# zeroconf-ioslave

./: .kde-ci.yml  CMakeLists.txt  Makefile.am  org.kde.kio.worker.zeroconf.metainfo.xml  org.kde.zeroconf-ioslave.metainfo.xml  org.kde.zeroconf_ioslave.appdata.xml  org.kde.zeroconf_ioslave.metainfo.xml
ioslave/: CMakeLists.txt  CONFIG_FORMAT  Makefile.am  Messages.sh  _ftp._tcp  _http._tcp  _ldap._tcp  _nfs._tcp  _rfb._tcp  _sftp-ssh._tcp  _ssh._tcp  _telnet._tcp  _webdav._tcp  dnssd.cpp  dnssd.desktop  dnssd.h  dnssd.protocol  invitation.protocol  zeroconf.desktop  zeroconf.protocol  zeroconfurl.h
kdedmodule/: CMakeLists.txt  Makefile.am  dnssdwatcher.cpp  dnssdwatcher.desktop  dnssdwatcher.h  dnssdwatcher.json  org.kde.kdnssd.xml  watcher.cpp  watcher.h
kioworker/: dnssd.cpp  dnssd.h  zeroconf.json
